# Chipset.Api

./: CMakeLists.txt
public/PiSubmarine/Chipset/Api/: Address.h  Command.h  Convert.h  Crc32Func.h  IClient.h  MicroAmpereHours.h  MicroAmperes.h  MicroKelvins.h  MicroVolts.h  PacketOut.h  PacketSetTime.h  PacketShutdown.h  Percentage.h  Register.h  Status.h  Stm32Crc.h
src/: CMakeLists.txt
src/PiSubmarine/Chipset/Api/: Convert.cpp  PacketOut.cpp  PacketSetTime.cpp  PacketShutdown.cpp
test/: CMakeLists.txt
test/PiSubmarine/Chipset/Api/: ConvertTest.cpp  PacketOutTest.cpp  PacketSetTimeTest.cpp
